jokes-api
add the operation endpoints
